# Transport-QMC

./: .gitignore  README.md  dim_red.py  experiment.py  models.py  nf_model.py  polynomial.py  pyproject.toml  requirements.txt  targets.py  train.py  utils.py
experiment/: compute_integral.py  experiment.py  experiment_bridgestan.py  plot_mse.ipynb  plots.ipynb  plots_composite.ipynb  reg_rkl.py  run_realnvp.py  run_stan_sampler.py  t_dist.py  test_tqmc.py  weight_as.py
experiment/logistic/: dim_red.py  logistic.py  logistic_regkl.py  moments_logistic_ar1_d_100_N_20_rho_0.9.pkl  moments_logistic_ar1_d_100_N_50_rho_0.9.pkl  moments_logistic_ar1_d_20_N_20_rho_0.9.pkl  moments_logistic_ar1_d_20_N_50_rho_0.9.pkl  moments_logistic_ar1_d_50_N_20_rho_0.9.pkl  moments_logistic_ar1_d_50_N_50_rho_0.9.pkl  moments_logistic_ar1_d_50_N_50_rho_0.9_n_1048576_rep_1000.pkl  moments_logistic_ar1_d_5_N_20_rho_0.9.pkl  moments_logistic_ar1_d_5_N_50_rho_0.9.pkl  moments_logistic_equi_d_100_N_20_rho_0.7.pkl  moments_logistic_equi_d_100_N_50_rho_0.7.pkl  moments_logistic_equi_d_20_N_20_rho_0.7.pkl  moments_logistic_equi_d_20_N_50_rho_0.7.pkl  moments_logistic_equi_d_50_N_20_rho_0.7.pkl  moments_logistic_equi_d_50_N_50_rho_0.7.pkl  moments_logistic_equi_d_5_N_20_rho_0.7.pkl  moments_logistic_equi_d_5_N_50_rho_0.7.pkl  moments_logistic_low_rank_d_20_N_50_rho_3.pkl  moments_logistic_low_rank_d_50_N_20_rho_3.pkl  plots.ipynb  (+2 more)
experiments/: banana_example.ipynb  example.ipynb  logistic.py  plots.ipynb  posteriordb_simulation.py  run_mcmc.py
models/: copula.py  realnvp.py  tqmc.py  tqmc_AS.py
(+8 files in other folders)
